

 - Bugfix: data broadcast descriptor (tnx to Sergio SAGLIOCCO, SecureLAB)

 - New: bad ts packet counter  on -s bandwidth (tnx to W.J. Beksi, setabox for basic patch)
 - New: large file support (>2 GB), applies to -if  option (tnx to K. Zheng, Philips)
 - New: full/raw transport stream read (option -tsraw)

 - New: "premiere.de" private tables and descriptors (tnx to Peter.Pavlov, Premiere)
 - New: option -privateprovider <providerstr>
 - New: Private provider sections and descriptors decoding 
 - Changed: complete restructuring of private descriptors and sections 
 - Changed: section decoding functions renamed due to preparation of private structures
 - Changed: TS pid filtering from file, behavior changed
 - New: new cmdline option -maxdmx <n>  (replaces -f using pidscan)
 - New: new cmdline option -buffersize x (in Kbytes) to tweak DMX Buffer
 - Update: changes due to  EN 300 468 v1.6.1
 - Bugfix: multilingual component descriptor  (tnx to Karsten Siebert, dpi AG)
 - Update: EN 300 468 v1.6.1 Terrestrial delivery system descriptor
 - Change: FE adaptions (due to change defines on API)
 - Bugfix: multilang service descriptor fix  (tnx to Karsten Siebert)
 - New: MetaData Section  (Basic) (H.222.0 AMD1)
 - New: MPEG Metadata STD descriptor (H.222.0 AMD1)
 - New: MPEG Content Labeling descriptor  (H.222.0 AMD1)
 - New: PES update ITU-T H.222.0 AMD2
 - Bugfix: cell list descriptors (tnx to Karsten Siebert)
 - Bugfix: cable descriptors frequency (tnx to Karsten Siebert)
 - New: TV-Anytime (TS 102 323) RNT descriptors
 - Bugfix: UNT/INT table mixup, misc. descriptor stuff  (tnx to Karsten Siebert)
 - Update: misc. tables
 - New: resolution_authority/provider_notification_section (RNT) (TS 102 323)
 - New: content_identifier_descriptor (TS 102 323)
 - New: TVA_id_descriptor (TS 102 323)
 - New: related_content_descriptor (TS 102 323)
 - New: default_authority_descriptor (TS 102 323)
 - New: ECM_repetition_rate_descriptor (EN 301 192 v1.4.1)